--- a/main.html
+++ b/main.html
@@ -8,13 +8,10 @@
   <header>
     <h1>List All Technology Accessories Courses ALURA</h1>
     <nav>
-<<<<<<< HEAD
-      <a href="#">HOME HOME HOME</a>
+      <a href="#">HOME</a>
       <a href="#">Store</a>
-=======
       <a href="#">Home</a>
-      <a href="#">Store Mega store</a>
->>>>>>> 803b6f0 (Add Mega Store)
+      <a href="#">Store</a>
       <a href="#">About US</a>
       <a href="#">Contact Us</a>
       
